--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,18 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Leaflet Webpack</title>
+    <title>Webpack Example</title>
   </head>
+  <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="/node_modules/esri-leaflet-geocoder/dist/esri-leaflet-geocoder.css" />
+  <style>
+    html, body, #map {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+    }
+  </style>
   <body>
-    <div id="map" style="width: 100%; height: 100%;"></div>
+    <div id="map"></div>
   </body>
 </html>
