--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,16 @@
   <head>
     <title>Webpack Example</title>
   </head>
-  <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css" />
-  <link rel="stylesheet" href="/node_modules/esri-leaflet-geocoder/dist/esri-leaflet-geocoder.css" />
   <style>
-    html, body, #map {
+    html,
+    body,
+    #mapNode {
       width: 100%;
       height: 100%;
       margin: 0;
     }
   </style>
   <body>
-    <div id="map"></div>
+    <div id="mapNode"></div>
   </body>
 </html>
